force-app/main/default/objects/Bank_with_RM__c/Bank_with_RM__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Bank with RM</label>
</CustomObject>