force-app/main/default/objects/Bank_with_RM__c/fields/Disb_RM_Email__c.field-meta.xml
<CustomField>
    <fullName>Disb_RM_Email__c</fullName>
    <label>Disb RM Email</label>
    <type>Email</type>
</CustomField>