force-app/main/default/objects/Bank_with_RM__c/fields/Disb_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>Disb_RM_Name__c</fullName>
    <label>Disb RM Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>