force-app/main/default/objects/Bank_with_RM__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>100</length>
    <type>Text</type>
</CustomField>