force-app/main/default/objects/Bank_with_RM__c/fields/RM_Email__c.field-meta.xml
<CustomField>
    <fullName>RM_Email__c</fullName>
    <label>RM Email</label>
    <type>Email</type>
</CustomField>