force-app/main/default/objects/Bank_with_RM__c/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <label>RM Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>