force-app/main/default/objects/Bank_with_RM__c/fields/TL_Email__c.field-meta.xml
<CustomField>
    <fullName>TL_Email__c</fullName>
    <label>TL Email</label>
    <type>Email</type>
</CustomField>