force-app/main/default/objects/Bank_with_RM__c/fields/TL_Name__c.field-meta.xml
<CustomField>
    <fullName>TL_Name__c</fullName>
    <label>TL Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>