force-app/main/default/objects/Bank_with_RM__c/listViews/all_view_shraddha.listView-meta.xml
<ListView>
    <fullName>all_view_shraddha</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Disb_RM_Email__c</columns>
    <columns>Disb_RM_Name__c</columns>
    <columns>Inactive__c</columns>
    <columns>RM_Email__c</columns>
    <columns>RM_Name__c</columns>
    <columns>TL_Email__c</columns>
    <columns>TL_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>all view shraddha</label>
</ListView>